--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,15 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kreait/firebase-php": "^5.24",
+        "kreait/laravel-firebase": "^3.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/socialite": "^5.2",
+        "laravel/tinker": "^2.5",
+        "matthewbdaly/laravel-azure-storage": "^1.6",
+        "superbalist/laravel-google-cloud-storage": "^2.2",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
