--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "matthewbdaly/laravel-azure-storage": "^1.6",
+        "rap2hpoutre/laravel-log-viewer": "^1.7",
         "superbalist/laravel-google-cloud-storage": "^2.2",
         "tymon/jwt-auth": "^1.0"
     },
